--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,20 +3,20 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Sito Web
+    url: https://www.comune.preganziol.tv.it
+  - name: Servizi Online
+    url: https://servizionline.comune.preganziol.tv.it
+  - name: Zimbra
+    url: https://posta.comune.preganziol.tv.it
+  - name: NextCloud
+    url: https://nc.comune.preganziol.tv.it
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  # cname: demo.upptime.js.org
+  baseUrl: /rglauco/upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
