--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,6 +23,7 @@ status-website:
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: Statistiche uptime siti web
+  navbar:
     - title: Status
       href: /
     - title: GitHub
